k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maestro
  labels:
    app: maestro
    toolkit.fluxcd.io/tenant: maestro
