k8s/base/service-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: maestro
  labels:
    app: backend
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
    name: http
  selector:
    app: backend
